--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #fffbea;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+        h1 {
+            color: #ff6600;
+        }
+        a {
+            margin-top: 20px;
+            text-decoration: none;
+            color: white;
+            background-color: #007BFF;
+            padding: 8px 16px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+        a:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <h1>Hello!</h1>
@@ -10,3 +37,4 @@
     <a href="index.html">Back to Home</a>
 </body>
 </html>
+
