--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>About</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,11 +19,8 @@
     </nav>
 
     <div class="centered">
-        <h1>Hi there 👋 I'm Oluwakemi Adeleke</h1>
-        <h3>UI/UX Designer + Developer</h3>
-        <p>I'm a professional UI/UX designer with front end development skills.</p>
-        <img src="476efad6-8348-44db-bd5a-732096645817.png" alt="Profile Image">
+        <h1>About Page</h1>
+        <p>Content coming soon!</p>
     </div>
 </body>
 </html>
-
