--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </nav>
 
     <div class="centered">
-        <h1>Hi there 👋 I'm Oluwakemi Adeleke</h1>
-        <h3>UI/UX Designer + Developer</h3>
-        <p>I'm a professional UI/UX designer with front end development skills.</p>
+        <h1>Hi there 👋 I'm Valerie Jones</h1>
+        <h3>Data Scientist / Mathematics Undergraduate</h3>
+        <p>I am currently in my final year of University and looking to pursue a career in data science.</p>
         <img src="476efad6-8348-44db-bd5a-732096645817.png" alt="Profile Image">
     </div>
 </body>
