--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo">KK</div>
+        <div class="logo">VJ</div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -20,9 +20,12 @@
 
     <div class="centered">
         <h1>Hi there 👋 I'm Valerie Jones</h1>
-        <h3>Data Scientist / Mathematics Undergraduate</h3>
-        <p>I am currently in my final year of University and looking to pursue a career in data science.</p>
-        <img src="frontpageimage.png" alt="Profile Image">
+        <h3>Data Scientist</h3>
+        <p>I am currently in my final year of studying Mathematics at University of Bath, and looking to pursue a career in data science.</p>
+        <!--<img src="frontpageimage.png" alt="Profile Image">-->
+        <a href="cv.pdf" download>
+            <button>Download CV</button>
+        </a>
     </div>
 </body>
 </html>
