--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo">KK</div>
+        <div class="logo">VJ</div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
