--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h3>Data Scientist</h3>
         <p>I am currently in my final year of studying Mathematics at University of Bath, and looking to pursue a career in data science.</p>
         <!--<img src="frontpageimage.png" alt="Profile Image">-->
-        <a class="nav-button" href="cv.pdf" download>Download CV</a>
+        <a class="nav-button" href="valerie-jones-curriculum-vitae.pdf" download>Download CV</a>
     </div>
 </body>
 </html>
