--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="centered">
         <h1>Hi there 👋 I'm Valerie Jones</h1>
         <h3>Data Scientist</h3>
-        <p class="big">I am currently in my final year of studying Mathematics at University of Bath, and looking to pursue a career in data science.</p>
+        <p>I am currently in my final year of studying Mathematics at University of Bath, and looking to pursue a career in data science.</p>
         <!--<img src="frontpageimage.png" alt="Profile Image">-->
         <a class="nav-button" href="valerie-jones-curriculum-vitae.pdf" download>Download CV</a>
     </div>
