--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Contact</title>
+    <title>Case Studies</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,13 +12,12 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
         </ul>
-        <a class="nav-button" href="casestudies.html">Case Studies</a>
+        <a class="nav-button" href="contact.html">Contact Me</a>
     </nav>
 
     <div class="centered">
-        <h1>Contact Page</h1>
+        <h1>Case Studies Page</h1>
         <p>Content coming soon!</p>
     </div>
 </body>
