--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
     <div class="blob-dark"></div>
     <div class="blob-light"></div>
     <nav>
-        <div class="logo">VJ</div>
+        <div class="logo-container">
+            <a href="https://www.linkedin.com/in/valerie-jones-60a007243/" class="logo" target="_blank">
+                <img src="images/linkedin.png" alt="linkedin.png" />
+            </a>
+            <a href="https://github.com/valeriej0nes" class="logo" target="_blank">
+                <img src="images/github.png" alt="github.png" />
+            </a>
+        </div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
         </ul>
-        <a class="nav-button" href="casestudies.html">Case Studies</a>
+        <a class="nav-button" href="contact.html">Contact Me</a>
     </nav>
 
     <main class="hero">
