--- a/about.html
+++ b/about.html
@@ -12,9 +12,8 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
         </ul>
-        <a class="nav-button" href="casestudies.html">Case Studies</a>
+        <a class="nav-button" href="contact.html">Contact Me</a>
     </nav>
 
     <div class="centered">
