--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Google Fonts: Aleo & Archivo -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="blob-dark"></div>
@@ -27,8 +33,8 @@
 
     <main class="hero">
         <div class="hero-box">
-            <h1>Hi there 👋 I’m Valerie</h1>
-            <p>
+            <h1 class="aleo-regular">Hi there 👋 I’m Valerie</h1>
+            <p class="archivo-regular">
             Welcome to my portfolio website. Check out the relevant tabs or download my CV below.<br>
             This is my development website built from scratch - no vibe coding,
             no online templates, just something simple to help me learn web development.<br>
