--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <nav>
-        <div class="logo">VJ</div>
+        <div class="logo-container">
+            <a href="https://www.linkedin.com/in/valerie-jones-60a007243/" class="logo" target="_blank">
+                <img src="images/linkedin.png" alt="linkedin.png" />
+            </a>
+            <a href="https://github.com/valeriej0nes" class="logo" target="_blank">
+                <img src="images/github.png" alt="github.png" />
+            </a>
+        </div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
