--- a/about.html
+++ b/about.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>About</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Google Fonts: Aleo & Archivo -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <nav>
@@ -23,9 +29,76 @@
         <a class="nav-button" href="contact.html">Contact Me</a>
     </nav>
 
+    <!--
     <div class="centered">
-        <h1>About Page</h1>
-        <p>Content coming soon!</p>
-    </div>
+        <h1 class="aleo-regular">About Page</h1>
+        <p class="archivo-regular">Content coming soon!</p>
+    </div>-->
+
+    <div class="blob-about-1"></div>
+
+    <main class="who-am-i">
+        <div class="who-am-i-box">
+            <section>
+                <h2 class="aleo-regular">Who am I?</h2>
+                <p class="archivo-regular">
+                    I’m Valerie, a final-year Mathematics student at the University of Bath with a lifelong love for numbers
+                    and problem-solving. Maths has always been my way of understanding the world - it’s the language that explains
+                    patterns, uncovers hidden connections, and turns complexity into clarity. Along the way, I discovered data science,
+                    and it felt like the perfect bridge between theory and impact. Suddenly, the abstract beauty of maths could be
+                    applied to real-world challenges - from predicting engineering parameters to optimising workflows - across
+                    industries I’d never imagined working in. What excites me most is the mix of creativity and logic: asking
+                    the right questions, shaping messy datasets into meaningful insights, and building models that can genuinely
+                    make a difference.
+                </p>
+
+                <p class="archivo-regular">
+                    Beyond academics, I’m an active member of the University’s rowing team, where I combine my love of sport with my
+                    passion for data. I enjoy applying performance analytics to training - tracking metrics, visualising trends, and
+                    using statistical insights to refine technique and strategy. Whether on the water or at my desk, I’m motivated by
+                    curiosity, adaptability, and the belief that data, when interpreted well, can inspire improvement and deliver
+                    meaningful results.
+                </p>
+            </section>
+        </div>
+    </main>
+    <div class="blob-about-2"></div>
+    <main class = "my-experience">
+        <div class="my-experience-box">
+            <section>
+                <h2 class="aleo-regular">My Experience</h2>
+                <p class="archivo-regular">
+                    In 2024-2025 I went on a placement year at GE Aerospace, I immersed myself in the challenge of applying
+                    machine learning to high-dimensional time series and sensor data from aircraft engines. I built and evaluated
+                    supervised learning models - including Random Forest, MLP, and KNN - optimising performance through hyperparameter
+                    tuning and feature importance analysis. I also explored Bayesian networks for anomaly detection, integrated SQL
+                    queries into large-scale cloud-based pipelines, and used PySpark to streamline model development. Beyond the technical
+                    skills, I learned how to work within a rigorous engineering environment - collaborating across teams, maintaining high
+                    coding standards, and automating workflows to save significant time for downstream analysts.<br>
+                    <br>
+                    In the summer before that, I joined Edwards Vacuum as a Data Analyst Intern in their Business & Logistics department,
+                    where I developed algorithms to flag inefficiencies in product transport, leading to tangible cost-saving actions across
+                    global operations. I also introduced machine learning to predict customer behaviour, sparking internal discussions about
+                    integrating advanced analytics into forecasting practices. This role sharpened my ability to translate technical results
+                    into clear, business-oriented recommendations for executives.<br>
+                    <br>
+                    Alongside industry experience, my Mathematics degree at the University of Bath has given me a solid foundation of many
+                    subjects such as linear algebra, statistics, numerical analysis, and machine learning. I’ve learned to approach problems
+                    methodically, balance precision with efficiency, and adapt theoretical knowledge to practical scenarios. The combination of
+                    mathematical rigour and hands-on programming has prepared me to tackle complex analytical challenges with both technical depth
+                    and creative problem-solving.
+                </p>
+            </section>
+
+            <section>
+                <h2 class="aleo-regular">Programming Languages</h2>
+                <p class="archivo-regular">
+                    I am most comfortable with Python, SQL, and Spark for data manipulation and analysis. These are the languages I spent most
+                    of my placement working with. I also have used R in my summer internship as well as in my university studies. I have some experience
+                    with HTML, and CSS, which I used to build this website, and have a basic understanding of web development.
+               </p>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
