--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Google Fonts: Aleo & Archivo -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <nav>
@@ -24,8 +30,8 @@
     </nav>
 
     <div class="centered">
-        <h1>Portfolio Page</h1>
-        <p>Content coming soon!</p>
+        <h1 class="aleo-regular">Portfolio Page</h1>
+        <p class="archivo-regular">Content coming soon!</p>
     </div>
 </body>
 </html>
